# amazon-dsstne

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  Makefile  NOTICE  README.md  Singularity
amazon-dsstne/: README.md
benchmarks/: Benchmark.md
benchmarks/dsstne/: config.json
benchmarks/tf/: autoencoder.py
cmake/: FindCppUnit.cmake  FindJsonCpp.cmake  FindNetCDF.cmake  FindNetCDF4.cmake  amazon-dsstne-config.cmake
docs/getting_started/: CDL.txt  DDL.txt  LDL.txt  examples.md  setup.md  userguide.md
java/: Makefile  pom.xml
java/src/main/java/com/amazon/dsstne/: Dim.java  Dsstne.java  NNDataSet.java  NNDataSetEnums.java  NNLayer.java  NNNetwork.java  NetworkConfig.java  TopKOutput.java
java/src/main/java/com/amazon/dsstne/data/: DenseNNDataSet.java  DenseWeightedNNDataSet.java  OutputNNDataSet.java  SparseNNDataSet.java  SparseWeightedNNDataSet.java
java/src/main/java/com/amazon/dsstne/knn/: AbstractKNearestNeighbors.java  BatchedKNearestNeighbors.java  DataType.java  DataUtil.java  KNearestNeighbors.java  KNearestNeighborsCuda.java  KnnResult.java  KnnSearch.java  NearestNeighbors.java  Neighbor.java  TimedBatchExecutor.java  UnbatchedKNearestNeighbors.java  Vector.java
java/src/main/native/: com_amazon_dsstne_Dsstne.cpp  com_amazon_dsstne_Dsstne.h  jni_util.cpp  jni_util.h
java/src/main/native_knn/: com_amazon_dsstne_knn_KNearestNeighborsCuda.cpp  com_amazon_dsstne_knn_KNearestNeighborsCuda.h
java/src/test/java/com/amazon/dsstne/: NNLayerTest.java  NNNetworkTest.java  NetworkConfigTest.java  TopKOutputTest.java
java/src/test/java/com/amazon/dsstne/data/: DenseNNDataSetTest.java  DenseWeightedNNDataSetTest.java  DimTest.java  NNDataSetEnumsTest.java  OutputNNDataSetTest.java
java/src/test/java/com/amazon/dsstne/knn/: DataTypeTest.java  KNearestNeighborsCudaTest.java  KnnResultTest.java
java/src/test/java/com/amazon/dsstne/test-data/: expected_output_1024.txt  index.txt  movielens_input_1024.txt
java/src/test/native/: main.cpp
python/: CDLAccessors.h  Makefile  NNDataSetAccessors.h  NNLayerAccessors.h  NNNetworkAccessors.h  NNNetworkFunctions.h  NNWeightAccessors.h  README.md  dsstnecalculate.h  dsstnemodule.cc  dsstnemodule.h  setup.py  utilities.h
python/embedding/: README.md  embedding.py  embedding_batch_normalization.json  embedding_no_batch_normalization.json  inference.py  inference_batch_normalization.json  inference_no_batch_normalization.json  search_batch_normalization.json  search_no_batch_normalization.json
python/embedding/checkpoint/: README.md
python/embedding/results/: README.md
python/encoder/: README.md  embedding.json  encoder.py  inference.json
python/images/: README.md  config.json  images.py  predict.cdl  train.cdl
python/images/checkpoint/: README.md
python/images/results/: README.md
samples/cifar-10/: CMakeLists.txt  config.json  dparse.cpp  predict.cdl  train.cdl
samples/movielens/: config.json  run_movielens_sample.sh
samples/network/: config_1.json  config_2.json  config_3.json  config_4.json  config_5.json  config_6.json
src/amazon/dsstne/: .gitignore  Makefile  Makefile.inc
src/amazon/dsstne/engine/: DsstneContext.cpp  DsstneContext.h  GpuSort.h  GpuTypes.cpp  GpuTypes.h  Makefile  NNEnum.h  NNLayer.cpp  NNLayer.h  NNNetwork.cpp  NNNetwork.h  NNTypes.cpp  NNTypes.h  NNWeight.cpp  NNWeight.h  NcExcptionWrap.h  bitonic.h  kActivation.cu  kDelta.cu  kLoss.cu  kernels.cu  kernels.h
src/amazon/dsstne/include/amazon/dsstne/engine/: GpuSort.h  GpuTypes.h  NNEnum.h  NNTypes.h  kernels.h
src/amazon/dsstne/knn/: DataReader.cpp  DataReader.h  KnnData.cpp  KnnData.h  KnnExactGpu.cu  KnnExactGpu.h  Makefile  MathUtil.cu  MathUtil.h  cudautil.cpp  cudautil.h  topk.cu  topk.h
src/amazon/dsstne/runtime/: DsstneContext.h  Makefile
src/amazon/dsstne/samples/: convert_ratings.awk  run_movie_lens_sample.sh
src/amazon/dsstne/utils/: Config.cpp  Config.h  FilterHelper.cpp  Filters.cpp  Filters.h  Makefile  NNRecsGenerator.cpp  NNRecsGenerator.h  NetCDFGenerator.cpp  NetCDFhelper.cpp  NetCDFhelper.h  ParserUtils.cpp  ParserUtils.h  Predict.cpp  TensorboardMetricsLogger.cpp  TensorboardMetricsLogger.h  Train.cpp  Utils.cpp  Utils.h  cdl.cpp  cdl.h  main.cpp
talks/: Data Science Summit.ppt  ISCA2017.pptx  OpenDataScienceConference2016.odp
tst/: Makefile  unittests.cpp
tst/amazon/dsstne/engine/: TestGpuBuffer.cpp  TestNNDataSet.cpp  TestNNDataSetDimensions.cpp
tst/gputests/: CMakeLists.txt  TestActivationFunctions.cpp  TestCostFunctions.cpp  TestDotProduct.cpp  TestDune.cpp  TestGpu.cpp  TestSort.cpp  TestUtils.h
tst/test_data/: validate_DataScaledMarginalCrossEntropy_02.json  validate_L2_01.json  validate_L2_02.json  validate_L2_LRelu_01.json  validate_L2_LRelu_02.json  validate_ScaledMarginalCrossEntropy_01.json  validate_ScaledMarginalCrossEntropy_02.json
tst/unittests/: CMakeLists.txt  TestDune.cpp  TestNetCDFhelper.cpp  TestUtils.cpp
